# prismFootPrint

./: .gitignore  CMakeLists.txt  README.md  sfm.sh
cmake/: OpenCV.cmake
src/: FootPrint.cpp  FootPrint.h  main.cpp
src/basicFunction/: CMakeLists.txt  basicFunction.cpp  basicFunction.h  click4corners.cpp
src/basicFunction/k_means/: k_means.cpp  k_means.h
src/camera/: CMakeLists.txt  Camera.cpp  Camera.h
src/image/: CMakeLists.txt  ImageInfo.h
src/openMVG/: CMakeLists.txt  OpenMVG.cpp  OpenMVG.h
src/openPose/: CMakeLists.txt  OpenPosePerson.cpp  OpenPosePerson.h  exportHumanPoseTxt.cpp  myOpenPose.h
src/pointCloud/: CMakeLists.txt  Model.cpp  Model.h
src/reconstruction/: CMakeLists.txt  Reconstruction.cpp  Reconstruction.h
src/videoToImage/: CMakeLists.txt  trimVideo.cpp  videoToImage.cpp
